Refactor logging service & Bumping stemcell jammy 1.102